[package]
name = "tumblr-likes"
version = "0.3.3"
authors = ["Alex Taylor <alex@alext.xyz>"]
description = "Downloads your liked photos and videos on Tumblr."
readme = "README.md"
categories = ["command-line-utilities"]
keywords = [
    "tumblr",
    "downloader",
    "download",
    "photo",
    "video",
]
homepage = "https://github.com/subnomo/tumblr-likes"
repository = "https://github.com/subnomo/tumblr-likes"
license = "MIT"
edition = "2018"

[dependencies]
clap = "2.32.0"
indicatif = "0.10.2"
regex = "1.1.0"
reqwest = "0.9.5"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
