[package]
name = "tumblr-likes"
version = "0.3.5"
authors = ["Alex Taylor <alex@alext.xyz>"]
description = "Downloads your liked photos and videos on Tumblr."
readme = "README.md"
categories = ["command-line-utilities"]
keywords = [
    "tumblr",
    "downloader",
    "download",
    "photo",
    "video",
]
homepage = "https://github.com/subnomo/tumblr-likes"
repository = "https://github.com/subnomo/tumblr-likes"
license = "MIT"
edition = "2018"

[dependencies]
clap = { version = "3.2.17", features = ["cargo"] }
indicatif = "0.17.0"
regex = "1.6.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.143"
serde_derive = "1.0.143"
serde_json = "1.0.83"
tokio = { version = "1", features = ["full"] }
